# VillageSimulation

./: .gitignore  CMakeLists.txt  README.md
include/: State.hpp
src/: CMakeLists.txt  main.cpp
src/agents/: Agent.cpp  CMakeLists.txt  Envelope.cpp
src/agents/include/: Agent.hpp  Envelope.hpp
src/core/: CMakeLists.txt  Place.cpp
src/core/include/: Place.hpp
src/interfaces/: CMakeLists.txt  IDrawable.hpp
src/main/: CMakeLists.txt  God.cpp  MainController.cpp  Villager.cpp
src/main/include/: God.hpp  MainController.hpp  Timer.hpp  Villager.hpp
src/main/places/: Bakery.cpp  CMakeLists.txt  Farm.cpp  FeedingTrough.cpp  Mill.cpp  Quarry.cpp  Rally.cpp  Well.cpp
src/main/places/include/: Bakery.hpp  Farm.hpp  FeedingTrough.hpp  Mill.hpp  Quarry.hpp  Rally.hpp  Well.hpp
src/window/: CMakeLists.txt  ScreenManager.cpp  WindowHandler.cpp  WindowStorage.cpp
src/window/include/: ScreenManager.hpp  WindowHandler.hpp  WindowStorage.hpp
src/window/src/: ScreenManager.cpp  WindowHandler.cpp  WindowStorage.cpp
test/: CMakeLists.txt  main.cpp
